# siteinfo

./: .gitignore  README.md  run.py
app/: filetime.py  filetime.pyi  main.py  protocols.py  requirements.txt  runner.py
app/database/: sqlite_db_scripts.py  sqlite_provider.py
app/siteplugins/: gismeteo-2week.py
config/: config.json
install/: CMakeLists.txt  siteinfo.service.in  version.info
